ViewLinkActivity.kt activity_view_link.xml 레이아웃 colors.xml 칼라추가 themes.xml 칼라설정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0000FF</color>
+    <color name="green">#01DF01</color>
+    <color name="red">#B40404</color>
+    <color name="gray">#C839393A</color>
+    <color name="whitegray">#F7F5F5F7</color>
+    <color name="maincolor">#FB5762</color>
 </resources>
