--- a/app/src/main/res/layout/activity_view_link.xml
+++ b/app/src/main/res/layout/activity_view_link.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewLinkActivity">
+    tools:context=".ui.activity.ViewLinkActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ViewLinkActivity_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
