--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,19 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+        <style name="important1">
+            <item name="android:textSize">16sp</item>
+            <item name="android:textColor">@color/black</item>
+            <item name="android:textStyle">bold</item>
+        </style>
+    <style name="important6">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/gray</item>
+        </style>
+    <style name="imageButton">
+        <item name="android:scaleType">fitStart</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
 </resources>
