Room 데이터소스 추가-에러 수정

--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -41,8 +39,8 @@
 
         <TextView
             android:id="@+id/linkTextView"
-            android:layout_width="0dp"
             style="@style/header4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="세부링크"
             app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -63,8 +61,8 @@
 
         <TextView
             android:id="@+id/tagTextView"
-            android:layout_width="0dp"
             style="@style/header4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="태그"
             app:layout_constraintEnd_toEndOf="@+id/linkEditText"
