--- a/app/src/main/res/layout/item_links.xml
+++ b/app/src/main/res/layout/item_links.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/linksItem_domainTextView"
         style="@style/important6"
@@ -54,9 +56,8 @@
     <ImageView
         android:id="@+id/listItem_shareButton"
         style="@style/imageButton"
-        android:layout_height="42dp"
         android:layout_width="0dp"
-
+        android:layout_height="42dp"
         app:layout_constraintBottom_toBottomOf="@+id/linksItem_webButton"
         app:layout_constraintEnd_toStartOf="@id/linksItem_editButton"
         app:layout_constraintStart_toEndOf="@+id/linksItem_webButton"
@@ -68,7 +69,6 @@
         style="@style/imageButton"
         android:layout_width="0dp"
         android:layout_height="42dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/linksItem_deleteButton"
         app:layout_constraintStart_toEndOf="@+id/listItem_shareButton"
@@ -80,7 +80,6 @@
         style="@style/imageButton"
         android:layout_width="0dp"
         android:layout_height="42dp"
-
         app:layout_constraintBottom_toBottomOf="@+id/linksItem_editButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linksItem_editButton"
