--- a/app/src/main/res/layout/activity_view_link.xml
+++ b/app/src/main/res/layout/activity_view_link.xml
@@ -30,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        app:backgroundTint="@color/maincolor"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
