--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -104,6 +104,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linkTextView" />
 
         <TextView
+
             android:id="@+id/tagTextView"
             style="@style/header4"
             android:layout_width="0dp"
@@ -130,6 +131,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="저장하기"
+
+            android:background="@color/maincolor"
+            android:fontFamily="@font/jalnanche"
+
+            android:textColor="@color/white"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="@+id/tagChipGroup"
             app:layout_constraintStart_toStartOf="@+id/tagChipGroup"
             app:layout_constraintTop_toBottomOf="@+id/tagChipGroup" />
