--- a/app/src/main/res/layout/fragment_edit_tag.xml
+++ b/app/src/main/res/layout/fragment_edit_tag.xml
@@ -37,6 +37,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="저장하기"
+            android:background="@color/maincolor"
+            android:fontFamily="@font/jalnanche"
+
+            android:textColor="@color/white"
+            android:textSize="20dp"
+
             app:layout_constraintEnd_toEndOf="@+id/nameEdtiText"
             app:layout_constraintStart_toStartOf="@+id/nameEdtiText"
             app:layout_constraintTop_toBottomOf="@+id/nameEdtiText" />
