--- a/app/src/main/res/layout/fragment_edit_tag.xml
+++ b/app/src/main/res/layout/fragment_edit_tag.xml
@@ -3,7 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data />
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.mylink.viewmodel.TagViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,6 +32,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="이름을 입력해주세요"
+            android:text="@={viewModel.tagName}"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="@+id/nameTextView"
@@ -39,10 +45,8 @@
             android:text="저장하기"
             android:background="@color/maincolor"
             android:fontFamily="@font/jalnanche"
-
             android:textColor="@color/white"
             android:textSize="20dp"
-
             app:layout_constraintEnd_toEndOf="@+id/nameEdtiText"
             app:layout_constraintStart_toStartOf="@+id/nameEdtiText"
             app:layout_constraintTop_toBottomOf="@+id/nameEdtiText" />
