viewmodel 정리 도메인, 태그 없을 때 xml 수정 viewDomainFragment 추가

--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.mylink.viewmodel.CreateLinkViewModel" />
+            type="com.example.mylink.viewmodel.LinkViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
