--- a/app/src/main/res/layout/fragment_edit_domain.xml
+++ b/app/src/main/res/layout/fragment_edit_domain.xml
@@ -2,8 +2,11 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <data />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.mylink.viewmodel.DomainViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,7 +29,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="http://www..."
-            android:inputType="textPersonName"
+            android:text="@={viewModel.domainUrl}"
             app:layout_constraintEnd_toEndOf="@+id/urlTextView"
             app:layout_constraintStart_toStartOf="@+id/urlTextView"
             app:layout_constraintTop_toBottomOf="@+id/urlTextView" />
@@ -49,6 +52,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="이름을 입력해주세요"
+            android:text="@={viewModel.domainName}"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="@+id/nameTextView"
