--- a/app/src/main/res/layout/item_search_set.xml
+++ b/app/src/main/res/layout/item_search_set.xml
@@ -17,7 +17,7 @@
         <TextView
             android:id="@+id/keywordTextView"
             style="@style/header5"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:text="@{search.search.keyword}"
