--- a/app/src/main/res/layout/fragment_edit_domain.xml
+++ b/app/src/main/res/layout/fragment_edit_domain.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.example.mylink.ui.component.CustomBasicToolbar
+            android:id="@+id/toolbar"
+            app:toolbarTitle="도메인 생성"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/urlTextView"
             style="@style/header4"
