--- a/app/src/main/res/layout/fragment_edit_tag.xml
+++ b/app/src/main/res/layout/fragment_edit_tag.xml
@@ -15,6 +15,16 @@
         android:layout_height="match_parent">
 
 
+        <com.example.mylink.ui.component.CustomBasicToolbar
+            android:id="@+id/toolbar"
+            app:toolbarTitle="태그 생성"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <TextView
             android:id="@+id/nameTextView"
             style="@style/header4"
