--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,6 +11,7 @@
             name="viewModel"
             type="com.example.mylink.viewmodel.ReadLinkViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -25,17 +26,6 @@
             app:layout_constraintEnd_toStartOf="@+id/searchImageView"
             app:layout_constraintTop_toTopOf="@+id/deleteImageView" />
 
-        <ImageView
-            android:id="@+id/searchImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_margin="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
-            app:layout_constraintEnd_toEndOf="@+id/searchEditText"
-            app:layout_constraintTop_toTopOf="@+id/searchEditText"
-            app:layout_constraintVertical_bias="0.2"
-            app:srcCompat="@drawable/ic_baseline_search_24" />
-
         <EditText
             android:id="@+id/searchEditText"
             android:layout_width="0dp"
@@ -43,6 +33,7 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="10dp"
             android:ems="10"
+            android:text="@={viewModel.searchWord}"
             android:hint="검색어를 입력해주세요"
             android:imeOptions="actionSearch"
             android:inputType="textPersonName"
@@ -98,5 +89,16 @@
             app:layout_constraintTop_toBottomOf="@+id/recentSearchWordTextView"
             tools:itemCount="3"
             tools:listitem="@layout/item_search_set" />
+
+        <ImageView
+            android:id="@+id/searchImageView"
+            android:layout_width="20dp"
+            android:layout_height="0dp"
+            android:layout_margin="5dp"
+            app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
+            app:layout_constraintEnd_toEndOf="@+id/searchEditText"
+            app:layout_constraintTop_toTopOf="@+id/searchEditText"
+            app:layout_constraintVertical_bias="0.2"
+            app:srcCompat="@drawable/ic_baseline_close_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
