--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="gray">#FF999999</color>
     <color name="maincolor">#FB5762</color>
     <color name="light_gray">#C4C4C4</color>
+    <color name="charcoal">#212121</color>
+    <color name="my_purple">#6B65CD</color>
 </resources>
