--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,24 +7,26 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorSecondaryVariant">@color/gray</item>
+        <item name="colorOnSecondary">@color/white</item>
+
+
 
         <item name="windowNoTitle">true</item>
     </style>
 
-        <style name="important1">
-            <item name="android:textSize">16sp</item>
-            <item name="android:textColor">@color/black</item>
-            <item name="android:textStyle">bold</item>
-        </style>
+    <style name="important1" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <style name="important6">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/gray</item>
-        </style>
+    </style>
     <style name="imageButton">
         <item name="android:scaleType">fitStart</item>
         <item name="android:padding">10dp</item>
@@ -32,35 +34,35 @@
 
     <style name="header1">
         <item name="android:paddingVertical">20dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">35sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="header2">
         <item name="android:paddingVertical">15dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="header3">
         <item name="android:paddingVertical">10dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="header4">
         <item name="android:paddingVertical">8dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="header5">
         <item name="android:paddingVertical">5dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">18sp</item>
     </style>
 
