--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -8,6 +8,7 @@
             type="com.example.mylink.viewmodel.LinkViewModel" />
     </data>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,6 +21,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <EditText
+                android:id="@+id/nameEditText"
+                style="@style/important3"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="15dp"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:hint="이름을 입력해 주세요"
+                android:inputType="text"
+                android:text="@={viewModel.linkName, default = 링크이름}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/alinkTextView" />
 
             <ImageView
                 android:id="@+id/alinkImageView"
@@ -41,137 +57,96 @@
                 app:layout_constraintTop_toTopOf="@id/alinkImageView" />
 
             <TextView
-                android:id="@+id/linkNameTextView"
-                style="@style/header4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
-                android:text="@{viewModel.linkName}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/alinkImageView" />
-
-            <TextView
                 android:id="@+id/linkUrlTextView"
                 style="@style/header5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:paddingStart="18dp"
-                android:paddingEnd="15dp"
-                android:text="@{viewModel.fullUrl}"
+                android:paddingStart="10dp"
+                android:text="@{viewModel.fullUrl, default = https}"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/linkNameTextView" />
+                app:layout_constraintEnd_toEndOf="@+id/nameEditText"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/nameEditText"
+                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/addDomainTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:gravity="bottom"
-            android:text="추가"
-            app:layout_constraintBottom_toBottomOf="@id/domainTextView"
-            app:layout_constraintEnd_toEndOf="@id/domainTextView"
-            app:layout_constraintTop_toTopOf="@id/domainTextView" />
-        <TextView
-            android:id="@+id/addTagTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:gravity="bottom"
-            android:text="추가"
-            app:layout_constraintBottom_toBottomOf="@id/tagTextView"
-            app:layout_constraintEnd_toEndOf="@id/tagTextView"
-            app:layout_constraintTop_toTopOf="@id/tagTextView" />
-
-        <TextView
-            android:id="@+id/nameTextView"
-            style="@style/important1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="이름"
-            app:layout_constraintEnd_toEndOf="@+id/scrollView2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/scrollView2"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-
-        <EditText
-            android:id="@+id/nameEditText"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:ems="10"
-            android:hint="이름을 입력해 주세요"
-            android:inputType="text"
-            android:text="@={viewModel.linkName}"
-            app:layout_constraintEnd_toEndOf="@id/nameTextView"
-            app:layout_constraintStart_toStartOf="@id/nameTextView"
-            app:layout_constraintTop_toBottomOf="@id/nameTextView" />
-
-        <TextView
             android:id="@+id/domainTextView"
-            style="@style/important1"
+            style="@style/important3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:text="도메인"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
         <Spinner
             android:id="@+id/domainSpinner"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:paddingVertical="5dp"
-            app:layout_constraintEnd_toEndOf="@id/domainTextView"
-            app:layout_constraintStart_toStartOf="@id/domainTextView"
-            app:layout_constraintTop_toBottomOf="@id/domainTextView" />
+            app:layout_constraintEnd_toEndOf="@+id/domainTextView"
+            app:layout_constraintStart_toStartOf="@+id/domainTextView"
+            app:layout_constraintTop_toBottomOf="@+id/domainTextView" />
 
         <TextView
             android:id="@+id/linkTextView"
-            style="@style/important1"
+            style="@style/important3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="세부링크"
-            app:layout_constraintEnd_toEndOf="@id/domainSpinner"
-            app:layout_constraintStart_toStartOf="@id/domainSpinner"
-            app:layout_constraintTop_toBottomOf="@id/domainSpinner" />
+            app:layout_constraintEnd_toEndOf="@+id/domainSpinner"
+            app:layout_constraintStart_toStartOf="@+id/domainSpinner"
+            app:layout_constraintTop_toBottomOf="@+id/domainSpinner" />
 
         <EditText
             android:id="@+id/linkEditText"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
             android:ems="10"
-            android:text="@={viewModel.linkUrl}"
-            android:inputType="textPersonName"
             android:paddingVertical="5dp"
-            app:layout_constraintEnd_toEndOf="@id/linkTextView"
-            app:layout_constraintStart_toStartOf="@id/linkTextView"
-            app:layout_constraintTop_toBottomOf="@id/linkTextView" />
+            android:text="@={viewModel.linkUrl, default = https}"
+            app:layout_constraintEnd_toStartOf="@+id/pasteButton"
+            app:layout_constraintStart_toStartOf="@+id/linkTextView"
+            app:layout_constraintTop_toBottomOf="@+id/linkTextView" />
+
+        <Button
+            android:id="@+id/pasteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="붙여넣기"
+            app:layout_constraintBottom_toBottomOf="@+id/linkEditText"
+            app:layout_constraintEnd_toEndOf="@+id/linkTextView"
+            app:layout_constraintTop_toBottomOf="@+id/linkTextView"
+            android:background="@color/maincolor"
+            android:fontFamily="@font/jalnanche"
+            android:textColor="@color/white"
+
+            />
 
         <TextView
             android:id="@+id/tagTextView"
-            style="@style/important1"
+            style="@style/important3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="태그"
-            app:layout_constraintEnd_toEndOf="@id/linkEditText"
-            app:layout_constraintStart_toStartOf="@id/linkEditText"
-            app:layout_constraintTop_toBottomOf="@id/linkEditText" />
+            app:layout_constraintEnd_toEndOf="@+id/pasteButton"
+            app:layout_constraintStart_toStartOf="@+id/linkEditText"
+            app:layout_constraintTop_toBottomOf="@+id/linkEditText" />
 
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toTopOf="@+id/saveButton"
             app:layout_constraintEnd_toEndOf="@+id/tagTextView"
             app:layout_constraintStart_toStartOf="@+id/tagTextView"
             app:layout_constraintTop_toBottomOf="@+id/tagTextView">
@@ -186,15 +161,34 @@
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:text="저장하기"
             android:background="@color/maincolor"
             android:fontFamily="@font/jalnanche"
             android:textColor="@color/white"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
-            app:layout_constraintStart_toStartOf="@id/nameEditText"
-            app:layout_constraintTop_toBottomOf="@id/nameEditText" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/addDomainTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:gravity="bottom"
+            android:text="추가"
+            app:layout_constraintBottom_toBottomOf="@+id/domainTextView"
+            app:layout_constraintEnd_toEndOf="@+id/domainTextView"
+            app:layout_constraintTop_toTopOf="@+id/domainTextView" />
+
+        <TextView
+            android:id="@+id/addTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:gravity="bottom"
+            android:text="추가"
+            app:layout_constraintBottom_toBottomOf="@+id/tagTextView"
+            app:layout_constraintEnd_toEndOf="@+id/tagTextView"
+            app:layout_constraintTop_toTopOf="@+id/tagTextView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
