--- a/app/src/main/res/layout/include_empty.xml
+++ b/app/src/main/res/layout/include_empty.xml
@@ -9,19 +9,20 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         app:layout_constraintBottom_toTopOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_baseline_announcement_24" />
+        app:srcCompat="@drawable/ic_icons8_empty" />
 
     <TextView
         android:id="@+id/textView"
         style="header5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
         android:text="표시할 데이터가 없습니다."
         app:layout_constraintBottom_toBottomOf="parent"
