--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="light_gray">#C4C4C4</color>
     <color name="charcoal">#212121</color>
     <color name="my_purple">#6B65CD</color>
+    <color name="middle_gray">#878787</color>
 </resources>
