--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="charcoal">#212121</color>
     <color name="my_purple">#6B65CD</color>
     <color name="middle_gray">#878787</color>
+    <color name="light_light_gray">#E6E6E6</color>
 </resources>
