--- a/app/src/main/res/layout/item_link_search.xml
+++ b/app/src/main/res/layout/item_link_search.xml
@@ -20,6 +20,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
+            android:maxLines="1"
             android:text="@{data.link.name, default = 이름}"
             app:layout_constraintBottom_toTopOf="@id/fullUrlTextView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,14 +46,15 @@
             app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/nameTextView"
-            app:srcCompat="@drawable/ic_baseline_web_24" />
+            app:srcCompat="@drawable/ic_icons8_link" />
 
         <TextView
             android:id="@+id/fullUrlTextView"
+            style="@style/small3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:text="@{data.domain.url+data.link.url, default = url}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/nameTextView"
