--- a/app/src/main/res/layout/item_search_set.xml
+++ b/app/src/main/res/layout/item_search_set.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:text="@{search.search.keyword}"
+            android:text="@{search.search.keyword, default = 검색어}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
