--- a/app/src/main/res/layout/shimmer_link_search.xml
+++ b/app/src/main/res/layout/shimmer_link_search.xml
@@ -21,7 +21,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/nameTextView"
-            app:srcCompat="@drawable/ic_baseline_web_24" />
+            app:srcCompat="@drawable/ic_icons8_link" />
 
         <TextView
             android:id="@+id/nameTextView"
@@ -29,7 +29,7 @@
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/gray_shimmer_square"
             app:layout_constraintBottom_toTopOf="@id/fullUrlTextView"
@@ -44,7 +44,7 @@
             android:layout_width="300dp"
             android:layout_height="12dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="25dp"
             android:background="@drawable/gray_shimmer_square"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/nameTextView"
