--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,25 +17,33 @@
 
         <item name="windowNoTitle">true</item>
     </style>
-
     <style name="important2" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:paddingVertical">10dp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="important3" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textStyle">bold</item>
     </style>
+
     <style name="important6">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/gray</item>
     </style>
+
     <style name="imageButton">
         <item name="android:scaleType">fitStart</item>
         <item name="android:padding">10dp</item>
+    </style>
+
+
+    <style name="small3">
+        <item name="android:textSize">11sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="header1">
@@ -76,7 +84,6 @@
         <item name="android:paddingVertical">3dp</item>
         <item name="android:textSize">16sp</item>
     </style>
-
 
 
 </resources>
