--- a/app/src/main/res/layout/item_video_list_detail.xml
+++ b/app/src/main/res/layout/item_video_list_detail.xml
@@ -107,6 +107,6 @@
 
         <variable
             name="data"
-            type="com.github.yeeun_yun97.toy.linksaver.ui.fragment.ListVideoFragment.VideoData" />
+            type="com.example.mylink.ui.fragment.ListVideoFragment.VideoData" />
     </data>
 </layout>
