--- a/app/src/main/res/layout/item_search_set.xml
+++ b/app/src/main/res/layout/item_search_set.xml
@@ -8,41 +8,35 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_shape_searchsett"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="15dp">
 
         <TextView
             android:id="@+id/keywordTextView"
-            style="@style/header5"
+            style="@style/important3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:text="@{search.search.keyword, default = 검색어}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:textOrHide="@{search.search.keyword}"
+            app:layout_constraintBottom_toTopOf="@id/tagChipGroup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/tagChipGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="10dp"
-            android:minWidth="100dp"
-            app:chipDataList="@{search.tags}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/keywordTextView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"/>
-
-        <TextView
-            android:id="@+id/countTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginBottom="8dp"
-            app:chipCountData="@{search.tags.size()}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tagChipGroup" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/keywordTextView"
+            app:chipDataList="@{search.tags}" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
