--- a/app/src/main/res/layout/fragment_edit_tag.xml
+++ b/app/src/main/res/layout/fragment_edit_tag.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.mylink.viewmodel.TagViewModel" />
+            type="com.example.mylink.viewmodel.tag.TagViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,7 +42,7 @@
             android:layout_height="50dp"
             android:ems="10"
             android:hint="이름을 입력해주세요"
-            android:text="@={viewModel.tagName}"
+            android:text="@={viewModel.bindingTagName}"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/nameTextView"
             app:layout_constraintStart_toStartOf="@+id/nameTextView"
