그룹태그 기능 추가

--- a/app/src/main/res/layout/fragment_list_video.xml
+++ b/app/src/main/res/layout/fragment_list_video.xml
@@ -15,6 +15,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:toolbarTitle="동영상 목록" />
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/videoRecyclerView"
             android:layout_width="0dp"
@@ -24,7 +25,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
-            tools:listitem="@layout/item_video_list" />
+            tools:listitem="@layout/item_video_list_detail" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
