--- a/app/src/main/res/layout/fragment_edit_video.xml
+++ b/app/src/main/res/layout/fragment_edit_video.xml
@@ -43,6 +43,15 @@
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="@+id/scrollView" />
 
+        <TextView
+            android:id="@+id/addTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="태그 추가"
+            app:layout_constraintStart_toStartOf="@+id/scrollView"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+
         <ImageView
             android:id="@+id/videoTypeIconImageView"
             android:layout_width="50dp"
@@ -72,6 +81,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="url"
+            android:maxLines="3"
             android:text="@{viewModel.bindingUrl}"
             app:layout_constraintEnd_toEndOf="@id/nameEditText"
             app:layout_constraintHorizontal_bias="1.0"
