--- a/app/src/main/res/layout/item_setting.xml
+++ b/app/src/main/res/layout/item_setting.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.example.mylink.data.model.SettingData" />
+            type="com.example.mylink.data.model.SettingItemValue" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
