그룹태그 기능 추가

--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="com.example.mylink.ui.fragment.ListVideoFragment.VideoData" />
+            type="com.example.mylink.data.model.VideoData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
