--- a/app/src/main/res/layout/item_link_search.xml
+++ b/app/src/main/res/layout/item_link_search.xml
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
+            android:maxLines="3"
             android:text="@{data.domain.url+data.link.url, default = url}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/nameTextView"
