toolbar title 변경 위해 themes.xml 수정

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyLink" parent="Theme.AppCompat.Light">
+    <style name="Theme.MyLink" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/maincolor</item>
         <item name="colorPrimaryVariant">@color/white</item>
