클립보드 복사펑션 기능안됨 *안드로이드 스튜디오 자체문제*

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -61,7 +61,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/clipboardIconImageView">
 
-        <TextView
+        <EditText
             android:id="@+id/urlTextView"
             style="@style/important3"
             android:layout_width="match_parent"
