--- a/app/src/main/res/menu/toolbar_menu_edit.xml
+++ b/app/src/main/res/menu/toolbar_menu_edit.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/menu_save"
         android:icon="@drawable/ic_menu_save"
-        app:iconTint="?attr/colorOnPrimary"
+        app:iconTint="@color/black"
         android:title="save"
         app:showAsAction="always" />
 </menu>
