youtube video 미리보기 구현완료 및 drawable image 이름 통일화

--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -59,7 +59,7 @@
             android:layout_margin="15dp"
             app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_icons8_video__1_" />
+            app:srcCompat="@drawable/ic_icon_video" />
 
         <EditText
             android:id="@+id/nameEditText"
