--- a/app/src/main/res/layout/fragment_detail_link.xml
+++ b/app/src/main/res/layout/fragment_detail_link.xml
@@ -60,7 +60,7 @@
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@+id/previewImageView"
-            app:srcCompat="@drawable/ic_icons8_edit__1_" />
+            app:srcCompat="@drawable/ic_button_edit" />
 
         <ImageView
             android:id="@+id/deleteImageView"
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toEndOf="@+id/previewImageView"
             app:layout_constraintStart_toEndOf="@id/editImageView"
             app:layout_constraintTop_toTopOf="@+id/editImageView"
-            app:srcCompat="@drawable/ic_icons8_delete__4_" />
+            app:srcCompat="@drawable/ic_button_delete" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -138,14 +138,15 @@
 
                 <ImageView
                     android:id="@+id/emptyImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tagChipGroup"
                     app:layout_constraintEnd_toStartOf="@id/emptyTextView"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="@+id/tagChipGroup"
                     app:layout_constraintTop_toTopOf="@+id/tagChipGroup"
-                    app:srcCompat="@drawable/ic_icons8_empty__2_" />
+                    app:layout_constraintVertical_bias="0.35"
+                    app:srcCompat="@drawable/ic_empty_tag_group" />
 
                 <TextView
                     android:id="@+id/emptyTextView"
