--- a/app/src/main/res/layout/fragment_list_link.xml
+++ b/app/src/main/res/layout/fragment_list_link.xml
@@ -104,7 +104,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="@+id/searchEditText"
+            app:layout_constraintEnd_toStartOf="@id/cancelSearchSetImageView"
             app:layout_constraintStart_toStartOf="@+id/searchEditText"
             app:layout_constraintTop_toBottomOf="@id/searchEditText">
 
@@ -114,6 +114,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
         </HorizontalScrollView>
+
+        <ImageView
+            android:id="@+id/cancelSearchSetImageView"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/searchSetScrollView"
+            app:layout_constraintEnd_toEndOf="@+id/searchEditText"
+            app:layout_constraintStart_toEndOf="@+id/searchSetScrollView"
+            app:layout_constraintTop_toTopOf="@+id/searchSetScrollView"
+            app:srcCompat="@drawable/ic_button_cancel_search" />
 
         <ImageView
             android:id="@+id/emptyImageView"
