Dao 및 코드 정리

--- a/app/src/main/res/layout/fragment_edit_link.xml
+++ b/app/src/main/res/layout/fragment_edit_link.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.mylink.viewmodel.edit_link.EditVideoViewModel" />
+            type="com.example.mylink.viewmodel.edit_link.EditLinkViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
