--- a/app/src/main/res/layout/fragment_list_tag_group.xml
+++ b/app/src/main/res/layout/fragment_list_tag_group.xml
@@ -15,6 +15,7 @@
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/emptyGroup"
+            listEmptyView="@{viewModel.bindingTagGroups}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:constraint_referenced_ids="emptyImageView,emptyTextView,emptyAddImageView,emptyAddGroupTextView" />
