--- a/app/src/main/res/layout/fragment_detail_link.xml
+++ b/app/src/main/res/layout/fragment_detail_link.xml
@@ -22,52 +22,27 @@
             app:layout_constraintTop_toTopOf="parent"
             app:toolbarTitle="상세보기" />
 
-        <ImageView
-            android:id="@+id/previewImageView"
-            android:layout_width="match_parent"
+        <com.example.mylink.ui.component.SjPreview
+            android:id="@+id/previewPreview"
+            android:layout_width="0dp"
             android:layout_height="200dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:srcCompat="@drawable/ic_icons8_no_image_100" />
-
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="previewImageView,previewWebView"
-            tools:layout_editor_absoluteY="731dp" />
-
-        <WebView
-            android:id="@+id/previewWebView"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-        </WebView>
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:previewContent="@{viewModel.link}" />
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@+id/previewPreview">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.constraintlayout.widget.Group
-                    android:id="@+id/tagEmptyGroup"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="emptyImageView,emptyTextView" />
 
                 <TextView
                     android:id="@+id/nameTextView"
@@ -102,15 +77,22 @@
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/tagChipGroup"
-                    chipDataList="@{viewModel.bindingTags}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:paddingVertical="10dp"
+                    app:chipDataList="@{viewModel.bindingTags}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/fullUrlTextView"
                     app:layout_constraintHeight_min="200dp"
                     app:layout_constraintStart_toStartOf="@+id/fullUrlTextView"
                     app:layout_constraintTop_toBottomOf="@id/view3" />
+
+                <androidx.constraintlayout.widget.Group
+                    android:id="@+id/tagEmptyGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="emptyImageView,emptyTextView"
+                    app:listEmptyView="@{viewModel.bindingTags}" />
 
                 <ImageView
                     android:id="@+id/emptyImageView"
